--- a/src/resume.html
+++ b/src/resume.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimun-scale=1, maxinum-scale=1, user-scalable=no,viewport-fit=cover">
-    <meta http-equiv="X-UA-Compatible" content='ie=edge'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimun-scale=1, maxinum-scale=1, user-scalable=no">
     <title>Document</title>
     <style>
         *{
